added separate parent/child modes, API endpoints, filtering

--- a/byu_faculty_directory.links.menu.yml
+++ b/byu_faculty_directory.links.menu.yml
@@ -1,3 +1,4 @@
+# Adds the BYU Faculty Directory Configuration link under 'Content' on the admin pages
 byu_faculty_directory.form:
   title: 'BYU Faculty Directory Configuration'
   description: 'Configure the BYU Faculty Directory module.'
