--- a/config/install/byu_faculty_directory.config.yml
+++ b/config/install/byu_faculty_directory.config.yml
@@ -1,1 +1,5 @@
-api_key: ''
+# Configuration Settings Default Values for BYU Faculty Directory
+module_mode: 0
+oit_api_key: ''
+dept_api_key: ''
+parent_url: ''
