--- a/config/install/core.entity_view_display.node.byu_faculty_member.default.yml
+++ b/config/install/core.entity_view_display.node.byu_faculty_member.default.yml
@@ -12,6 +12,8 @@ dependencies:
     - field.field.node.byu_faculty_member.field_courses_override
     - field.field.node.byu_faculty_member.field_custom_content
     - field.field.node.byu_faculty_member.field_custom_title
+    - field.field.node.byu_faculty_member.field_department
+    - field.field.node.byu_faculty_member.field_department_override
     - field.field.node.byu_faculty_member.field_education
     - field.field.node.byu_faculty_member.field_education_override
     - field.field.node.byu_faculty_member.field_email
@@ -75,6 +77,8 @@ hidden:
   field_courses_override: true
   field_custom_content: true
   field_custom_title: true
+  field_department: true
+  field_department_override: true
   field_education: true
   field_education_override: true
   field_email: true
