added cv, image retrieval

--- a/byu_faculty_directory.routing.yml
+++ b/byu_faculty_directory.routing.yml
@@ -10,15 +10,23 @@ byu_faculty_directory.form:
     _permission: 'administer site configuration'
 
 # GET Route for Download All Faculty API
-byu_faculty_directory.get:
+byu_faculty_directory.get_all_faculty:
   path: '/byu-faculty-directory/all-faculty'
   defaults: { _controller: '\Drupal\byu_faculty_directory\Controller\BYUFacultyDirectoryController::all_faculty' }
   methods: [GET]
   requirements:
     _access: 'TRUE'
 
+# GET Route for Retrieval of Faculty Files
+byu_faculty_directory.get_faculty_files:
+  path: '/byu-faculty-directory/faculty-files'
+  defaults: { _controller: '\Drupal\byu_faculty_directory\Controller\BYUFacultyDirectoryController::faculty_files' }
+  methods: [GET]
+  requirements:
+    _access: 'TRUE'
+
 # POST Route for Download Filtered Faculty API
-byu_faculty_directory.post:
+byu_faculty_directory.post_filtered_faculty:
   path: '/byu-faculty-directory/filtered-faculty'
   defaults: { _controller: 'Drupal\byu_faculty_directory\Controller\BYUFacultyDirectoryController::filtered_faculty' }
   methods: [POST]
