--- a/config/install/field.field.node.byu_faculty_member.field_byu_f_d_phone_number.yml
+++ b/config/install/field.field.node.byu_faculty_member.field_byu_f_d_phone_number.yml
@@ -15,4 +15,4 @@ translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_byu_f_d_type: string
+field_type: string
