--- a/config/install/field.field.node.byu_faculty_member.field_byu_f_d_office_location_or.yml
+++ b/config/install/field.field.node.byu_faculty_member.field_byu_f_d_office_location_or.yml
@@ -8,7 +8,7 @@ id: node.byu_faculty_member.field_byu_f_d_office_location_or
 field_name: field_byu_f_d_office_location_or
 entity_type: node
 bundle: byu_faculty_member
-label: 'Office Location or'
+label: 'Office Location Override'
 description: 'If this is turned on, data stored in this field will not be overwritten by data from OIT.'
 required: false
 translatable: false
