--- a/config/install/views.view.faculty_directory_listing.yml
+++ b/config/install/views.view.faculty_directory_listing.yml
@@ -1217,7 +1217,7 @@ display:
           plugin_id: field
         title:
           id: title
-          table: node_field_byu_f_d_data
+          table: node_field_data
           field: title
           relationship: none
           group_type: group
@@ -1283,7 +1283,7 @@ display:
       filters:
         status:
           value: '1'
-          table: node_field_byu_f_d_data
+          table: node_field_data
           field: status
           plugin_id: boolean
           entity_type: node
@@ -1294,7 +1294,7 @@ display:
           group: 1
         type:
           id: type
-          table: node_field_byu_f_d_data
+          table: node_field_data
           field: type
           value:
             byu_faculty_member: byu_faculty_member
@@ -1304,7 +1304,7 @@ display:
       sorts:
         title:
           id: title
-          table: node_field_byu_f_d_data
+          table: node_field_data
           field: title
           order: ASC
           entity_type: node
@@ -2599,7 +2599,7 @@ display:
           plugin_id: entity_link
         title:
           id: title
-          table: node_field_byu_f_d_data
+          table: node_field_data
           field: title
           relationship: none
           group_type: group
