Dependencies changes, should uninstall now

--- a/config/install/core.entity_form_display.node.byu_faculty_member.default.yml
+++ b/config/install/core.entity_form_display.node.byu_faculty_member.default.yml
@@ -55,6 +55,9 @@ dependencies:
     - layout_discovery
     - path
     - text
+  enforced:
+    module:
+      - byu_faculty_directory
 third_party_settings:
   field_layout:
     id: layout_onecol
