--- a/config/install/core.entity_view_display.node.byu_faculty_member.default.yml
+++ b/config/install/core.entity_view_display.node.byu_faculty_member.default.yml
@@ -52,6 +52,9 @@ dependencies:
     - file
     - layout_discovery
     - user
+  enforced:
+    module:
+      - byu_faculty_directory
 third_party_settings:
   field_layout:
     id: layout_onecol
