--- a/config/install/field.storage.node.field_byu_f_d_links.yml
+++ b/config/install/field.storage.node.field_byu_f_d_links.yml
@@ -4,6 +4,9 @@ dependencies:
   module:
     - node
     - text
+  enforced:
+    module:
+      - byu_faculty_directory
 id: node.field_byu_f_d_links
 field_name: field_byu_f_d_links
 entity_type: node
