--- a/config/install/field.storage.node.field_byu_f_d_research_short_or.yml
+++ b/config/install/field.storage.node.field_byu_f_d_research_short_or.yml
@@ -3,6 +3,9 @@ status: true
 dependencies:
   module:
     - node
+  enforced:
+    module:
+      - byu_faculty_directory
 id: node.field_byu_f_d_research_short_or
 field_name: field_byu_f_d_research_short_or
 entity_type: node
