Ignoring vscode settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-# exculding my bash scripts from git
+# excluding my bash scripts from git
 rename.sh
 delete_config.sh
+
+#excluding vscode settings
+.vscode
