--- a/config/install/field.field.node.byu_faculty_member.field_byu_f_d_active.yml
+++ b/config/install/field.field.node.byu_faculty_member.field_byu_f_d_active.yml
@@ -2,14 +2,14 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_byu_f_d_emeritus
+    - field.storage.node.field_byu_f_d_active
     - node.type.byu_faculty_member
-id: node.byu_faculty_member.field_byu_f_d_emeritus
-field_name: field_byu_f_d_emeritus
+id: node.byu_faculty_member.field_byu_f_d_active
+field_name: field_byu_f_d_active
 entity_type: node
 bundle: byu_faculty_member
-label: 'Emeritus'
-description: 'Is the faculty member retired?'
+label: 'Active'
+description: 'Is the faculty member still actively employed?'
 required: false
 translatable: false
 default_value:
